--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "employee-directory",
+  "homepage": "https://ubern00bie.github.io/Employee-Directory/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -7,11 +8,14 @@
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "bootstrap": "^4.5.3",
+    "gh-pages": "^3.1.0",
     "react": "^17.0.0",
     "react-dom": "^17.0.0",
     "react-scripts": "3.4.4"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -b main -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
